--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@brookr/react-switch": "^6.0.1",
     "bootstrap": "^5.3.0",
+    "devicon": "^2.15.1",
     "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
